syntax = "proto3";

option csharp_namespace = "College.Service.Protos";

package addressbook;

import "google/protobuf/timestamp.proto";
import "ForHoldingMessages/Protos/AddressBookMessages.proto";

service AddressBookService {
  rpc AddUserAddress (AddressAdditionRequest) returns (AddressAdditionResponse);
  rpc AddPersonHealthData (HealthRequest) returns (HealthResponse);
}

/*
message AddressAdditionRequest {
  string name = 1;
  string address = 2;
}

message AddressAdditionResponse {
  string message = 1;
}
*/

message HealthRequest {
  string id = 1;
  string name = 2;
  int32 healthParameter1 = 3;
  int32 healthParameter2 = 4;
  google.protobuf.Timestamp receivedAt = 5;
}

message HealthResponse {
  string message = 1;
}

