syntax = "proto3";

option csharp_namespace = "College.Service.Protos";

package addressbook;

service AddressBookService {
  rpc AddUserAddress (AddressAdditionRequest) returns (AddressAdditionResponse);
}

message AddressAdditionRequest {
  string name = 1;
  string address = 2;
}

message AddressAdditionResponse {
  string message = 1;
}